# pharmacotopology

./: .gitignore  1CLL_A_FIX_SUMMARY.md  1CLL_A_QUICK_ANALYSIS.md  4AKE_ESMFOLD_TRYHARD_SOLVED_AUDIT_SUMMARY.md  4AKE_ITERATIVE_DG_DIFFUSION_FINAL_SUMMARY.md  4AKE_NOAF_CLOSURE_DECISION_SUMMARY.md  4AKE_NOAF_FINAL_FRONTIER_SUMMARY.md  4AKE_NOAF_FINAL_METRICS.json  4AKE_NOAF_HARD_ATTEMPT_V0_SUMMARY.md  4AKE_TRYHARD_LIVE_SOLUTION_V1.md  ADAPTIVE_FLOOR_DIAGNOSTICS_V0.md  ALPHAFOLD_4AKE_REAL_SOURCE_RESULT.md  ALPHAFOLD_4AKE_VALIDATION.txt  CALIBRATED_TOPOLOGY_VERIFIER_V0.md  CHAI1_BOLTZ_4AKE_SOLUTION_HUNT_STATUS.md  CHANGESET_CALIBRATED_TOPOLOGY_VERIFIER_V0.txt  CHANGESET_GLOBAL_VERIFIER_ANNEALING_V0.txt  CHANGESET_LOCAL_COEVOLUTION_EXPANSION_V0.txt  CHANGESET_LONG_RANGE_CALIBRATED_VERIFIER_V0.txt  CHANGESET_TRUE_LOCAL_MSA_COEVOLUTION_V0.txt  CLEAN_COMMANDS_ZIP_REPORT.json  CLEAN_REPO_MANIFEST.json  CLEAN_REPO_README_FIRST.md  CLEAN_REPO_V13A_ADAPTIVE_CHEMICAL_POLICY_V8_MANIFEST.json  CLEAN_REPO_V13A_PURPOSE_GATE_STRICT_HONEST_MANIFEST.json  CLEAN_REPO_V14_UNIFIED_GRAMMAR_MANIFEST.json  CLEAN_REPO_V15_4AKE_BALANCED_CANDIDATE_V17_MANIFEST.json  CLEAN_REPO_V16_DATA_PREFLIGHT_V20_MANIFEST.json  CLEAN_REPO_V16_ZERO_MD_ROLE_TRANSFER_V21_MANIFEST.json  CLEAN_REPO_V19_KCSA_SCHEMA_GUARD_REPAIR_V27_MANIFEST.json  CLEAN_ZIP_BUILD_REPORT.json  COARSE_GRAIN_MD_GEOMETRY_V0.md  COLLAPSE_SELECTION_LOGIC_ANALYSIS.md  COMMANDS_KCSA_REAL_SOURCE_IMPORT.md  COMMANDS_RUN_NOW.md  CONTACT_COLLAPSE_DIAGNOSTICS_V0.md  CRACKED_SOLUTION_SUMMARY.md  CURRENT_TRYHARD_RUN_SUMMARY.json  (+86 more)
tests/: conftest.py  (+185 more)
(+22186 files in other folders)
