[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knot-particle-simulation"
version = "0.1.0"
description = "Minimal KNOT particle-like closure toy-universe simulation."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
