[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacotopology"
version = "0.1.0"
description = "Clean protein-folding external coupling trace-loop benchmark."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
