[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmacotopology"
version = "0.1.0"
description = "Clean protein-folding external coupling trace-loop benchmark."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]
markers = [
  "visual: opt-in GIF/visual proof test",
  "slow: opt-in slow test",
  "full_suite: opt-in full-suite regression",
]
